--- a/定时抓取机制详解.md
+++ b/定时抓取机制详解.md
@@ -2,13 +2,11 @@
 
 ## 1. 定时抓取的时机
 
-### GitHub Actions 定时任务
-```yaml
-# .github/workflows/daily-update.yml
-on:
-  schedule:
-    - cron: '0 1 * * *'   # UTC 01:00 = 北京时间09:00
-```
+### 外部定时服务 (cron-job.org)
+**配置信息**：
+- **服务**: cron-job.org (免费)
+- **Cron表达式**: `0 1 * * *`
+- **时区**: UTC
 
 **触发时间**：
 - **UTC时间**：每天 01:00
@@ -17,12 +15,12 @@ on:
 
 ## 2. 定时抓取的完整流程
 
-### 步骤1：GitHub Actions 触发
+### 步骤1：外部定时服务触发
 ```bash
-# GitHub Actions 执行
+# cron-job.org 执行
 curl -X POST https://nyt-connections-helper.pages.dev/scheduled \
   -H "Content-Type: application/json" \
-  -d '{"action":"daily-update","secret":"${{ secrets.CRON_SECRET }}"}'
+  -d '{"action":"daily-update","secret":"your-secret-key"}'
 ```
 
 ### 步骤2：Cloudflare Functions 处理
@@ -152,7 +150,7 @@ curl -X POST https://nyt-connections-helper.pages.dev/api/refresh
 ## 6. 数据流向图
 
 ```
-GitHub Actions (UTC 01:00)
+外部定时服务 (UTC 01:00)
     ↓
 Cloudflare Functions (/scheduled)
     ↓
